# pfp-cli

./: LICENSE  README.md  pfp-cli.py  pyproject.toml
pfp_cli/: enum.py  main.py  scan.py
tests/: test_pfp_cli.py
