[tool.poetry]
name = "pfp-cli"
version = "0.1.0"
description = ""
authors = ["Erich <H3r1CH@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pfp-cli = "pfp_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
